--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
         <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
             <!-- Item 1 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="/imagenes/dom1.jpg" class="carousel-img" alt="imagen1">
+                <img src="./imagenes/dom1.jpg" class="carousel-img" alt="imagen1">
             </div>
             <!-- Item 2 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="/imagenes/dom2.png" class="carousel-img" alt="imagen1">
+                <img src="./imagenes/dom2.png" class="carousel-img" alt="imagen1">
             </div>
             <!-- Item 3 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="/imagenes/dom3.webp" class="carousel-img" alt="imagen1">
+                <img src="./imagenes/dom3.webp" class="carousel-img" alt="imagen1">
             </div>
             <!-- Item 4 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="/imagenes/dom1.jpg" class="carousel-img" alt="imagen1">
+                <img src="./imagenes/dom1.jpg" class="carousel-img" alt="imagen1">
             </div>
             <!-- Item 5 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
-                <img src="/imagenes/dom4.png" class="carousel-img" alt="imagen1">
+                <img src="./imagenes/dom4.png" class="carousel-img" alt="imagen1">
             </div>
         </div>
         <!-- Slider indicators -->
